--- a/style-ln.css
+++ b/style-ln.css
@@ -1,240 +1,184 @@
-:root {
-    --red: #ff5a3c;
-    --light-red: #f9edeb;
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+:root{
+    --red:#ff5a3c;
+    --light-red:#f9edeb;
 }
-
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Nunito', sans-serif;
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    text-decoration: none;
-    text-transform: capitalize;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-
-html {
-    font-size: 62.5%;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    scroll-padding-top: 7rem;
+html,body{
+  display: grid;
+  height: 100%;
+  width: 100%;
+  place-items: center;
 }
-
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    background: #fff;
-    padding: 2rem 9%;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+::selection{
+  background: #ff5a3c;
+  color: #fff;
 }
-
-header .logo {
-    font-weight: bolder;
-    font-size: 2.5rem;
-    color: #333;
+.wrapper{
+  overflow: hidden;
+  max-width: 390px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0px 15px 20px black;
 }
-
-header .logo span {
-    color: var(--red);
+.wrapper .title-text{
+  display: flex;
+  width: 200%;
 }
-
-header .navbar a {
-    color: #333;
-    font-size: 2rem;
-    padding: 0 1.5rem;
+.wrapper .title{
+  width: 50%;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
 }
-
-header .navbar a:hover {
-    color: var(--red);
+.wrapper .slide-controls{
+  position: relative;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  overflow: hidden;
+  margin: 30px 0 10px 0;
+  justify-content: space-between;
+  border: 1px solid lightgrey;
+  border-radius: 15px;
 }
-
-header .icons #menu-bars,
-header .icons a {
-    height: 4.5rem;
-    line-height: 4.5rem;
-    width: 5rem;
-    font-size: 2rem;
-    margin-right: .5rem;
-    border-radius: .5rem;
-    color: var(--red);
-    background: var(--light-red);
-    text-align: center;
+.slide-controls .slide{
+  height: 100%;
+  width: 100%;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 48px;
+  cursor: pointer;
+  z-index: 1;
+  transition: all 0.6s ease;
 }
-
-header .icons #menu-bars:hover,
-header .icons a:hover {
-    background-color: var(--red);
-    color: #fff;
+.slide-controls label.signup{
+  color: #000;
 }
-
-header .icons #menu-bars {
-    display: none;
+.slide-controls .slider-tab{
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  left: 0;
+  z-index: 0;
+  border-radius: 15px;
+  background: #ff5a3c;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
 }
-
-.box-form {
-    width: 380px;
-    height: 480px;
-    position: relative;
-    margin: 10% auto;
-    background-color: rgb(255, 255, 255);
-    padding: 5px;
-    box-shadow: 0 0 30px 9px #fbbaae;
-    overflow: hidden;
+input[type="radio"]{
+  display: none;
 }
-
-.button-box {
-    width: 220px;
-    margin: 35px auto;
-    position: relative;
-    box-shadow: 0 0 30px 9px #fbbaae;
-    border-radius: 30px;
-    background-color: #f9edeb;
+#signup:checked ~ .slider-tab{
+  left: 50%;
 }
-
-.button-in {
-    padding: 10px 30px;
-    cursor: pointer;
-    border: 0;
-    position: relative;
-    background: transparent;
-    outline: none;
-    /*color: #ffffff;*/
-    color: #333;
-    font-size: 1.5rem;
+#signup:checked ~ label.signup{
+  color: #fff;
+  cursor: default;
+  user-select: none;
 }
-
-.button-in:focus{
-    color: #fff;
+#signup:checked ~ label.login{
+  color: #000;
 }
-#btn {
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 110px;
-    height: 100%;
-    background-color: var(--red);
-    border-radius: 30px;
-    transition: .5s;
+#login:checked ~ label.signup{
+  color: #000;
 }
-
-.input-grp {
-    top: 150px;
-    width: 280px;
-    position: absolute;
-    transition: .5s;
+#login:checked ~ label.login{
+  cursor: default;
+  user-select: none;
 }
-
-.input-field {
-    width: 100%;
-    padding: 10px 0;
-    margin: 5px 0;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    border-bottom: 1px solid #999;
-    outline: none;
+.wrapper .form-container{
+  width: 100%;
+  overflow: hidden;
 }
-
-.submit-btn {
-    width: 85%;
-    padding: 10px 30px;
-    cursor: pointer;
-    display: block;
-    margin: auto;
-    color: var(--red);
-    background: #f9edeb;
-    border: 0;
-    outline: none;
-    border-radius: 30px;
+.form-container .form-inner{
+  display: flex;
+  width: 200%;
 }
-
-.submit-btn:hover {
-    background-color: var(--red);
-    color: #fff;
+.form-container .form-inner form{
+  width: 50%;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
 }
-
-.check-box {
-    margin: 30px 10px 30px 0;
+.form-inner form .field{
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
 }
-
-.check-item {
-    color: #777;
-    font-size: 12px;
-    bottom: 68px;
-    position: absolute;
+.form-inner form .field input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 15px;
+  border-radius: 15px;
+  border: 1px solid lightgrey;
+  border-bottom-width: 2px;
+  font-size: 17px;
+  transition: all 0.3s ease;
 }
-
-#login {
-    left: 50px;
+.form-inner form .field input:focus{
+  border-color: #ff5a3c;
 }
-
-#signup {
-    left: 450px;
+.form-inner form .field input::placeholder{
+  color: #999;
+  transition: all 0.3s ease;
 }
-
-@media screen and (max-width:600px) {
-    header .icons #menu-bars,
-header .icons a {
-    height: 2.5rem;
-    line-height: 2.5rem;
-    width: 2.5rem;
-    font-size: 1.5rem;
-    margin-right: .5rem;
-    border-radius: .5rem;
-    
+form .field input:focus::placeholder{
+  color: #ff5a3c;
 }
-header .navbar a {
-    color: #333;
-    font-size: 1.7rem;
-    padding: 0 2rem;
-} 
-
-.box-form {
-    width: 330px;
-    height: 410px;
-    margin: 36% auto;
-    padding: 2.5px;
-    box-shadow: 0 0 12px 4px #fbbaae;
+.form-inner form .pass-link{
+  margin-top: 5px;
 }
-
-.input-field {
-    width: 80%;
-    padding: 10px 0;
-    margin: 5px 10px;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    border-bottom: 1px solid #999;
-    outline: none;
+.form-inner form .signup-link{
+  text-align: center;
+  margin-top: 30px;
 }
-.submit-btn {
-    width: 60%;
-    padding: 10px 30px;
-    margin: auto 10%;    
+.form-inner form .pass-link a,
+.form-inner form .signup-link a{
+  color: #ff5a3c;
+  text-decoration: none;
 }
-.check-box {
-    margin: 20px 10px 20px 10px;
+.form-inner form .pass-link a:hover,
+.form-inner form .signup-link a:hover{
+  text-decoration: underline;
 }
-.check-item {
-    color: #777;
-    font-size: 12px;
-    bottom: 68px;
-    position: unset;
+form .btn{
+  height: 50px;
+  width: 100%;
+  border-radius: 15px;
+  position: relative;
+  overflow: hidden;
 }
-.input-grp {
-    top: 125px;
-    }
-header.home-nav{
-    display: block;
+form .btn .btn-layer{
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: #ff5a3c;
+  border-radius: 15px;
+  transition: all 0.4s ease;;
 }
-header {
-    padding: 1rem 2%;
+form .btn:hover .btn-layer{
+  left: 0;
 }
+form .btn input[type="submit"]{
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  padding-left: 0;
+  border-radius: 15px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
 }
